# humanbound-firewall

./: .clabot  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
compat/hb-firewall/: README.md  pyproject.toml
compat/hb-firewall/src/hb_firewall/: __init__.py
detectors/: example_classifier.py  one_class_svm.py  setfit_classifier.py
examples/: quickstart.py
src/hb_firewall/: __init__.py  cache.py  config.py  firewall.py  firewall_judge.py  hbfw.py  judge.py  metrics.py  models.py  session.py
src/hb_firewall/adapters/: __init__.py  promptfoo.py  pyrit.py
src/hb_firewall/llm/: __init__.py  azureopenai.py  claude.py  gemini.py  models.py  openai.py
src/hb_firewall/prompts/: judge.txt
src/humanbound_firewall/: __init__.py  cache.py  config.py  firewall.py  firewall_judge.py  hbfw.py  judge.py  metrics.py  models.py
src/humanbound_firewall/llm/: __init__.py  azureopenai.py  claude.py  gemini.py  models.py  openai.py
tests/: __init__.py  test_config.py  test_detectors.py  test_firewall.py  test_hbfw.py  test_import_time.py  test_judge.py  test_llm_providers.py  test_metrics.py  test_models.py
tests/fixtures/: agent.yaml
