[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-firewall"
version = "1.0.0"
description = "Multi-tier firewall for AI agents — prompt injection, jailbreak, and scope violation protection"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Humanbound", email = "oss@humanbound.ai"},
]
keywords = ["ai", "firewall", "security", "llm", "prompt-injection", "guardrails", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-generativeai>=0.3"]
tier1 = [
    "torch>=2.0",
    "transformers>=4.40",
    "protobuf>=3.20",
    "sentencepiece>=0.1",
]
benchmarks = [
    "datasets>=2.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.3",
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/humanbound/firewall"
Documentation = "https://github.com/humanbound/firewall#readme"
Repository = "https://github.com/humanbound/firewall"
Issues = "https://github.com/humanbound/firewall/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hb_firewall = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
